:sparkles: /Get forecasts updated with new instruction