@@ -1,5 +1,6 @@
 package com.agregio.forecast.controllers;
 
+import com.agregio.forecast.dto.ForecastPage;
 import com.agregio.forecast.entities.Forecast;
 import com.agregio.forecast.exceptions.ExceptionsHandler;
 import com.agregio.forecast.services.ForecastService;
@@ -16,6 +17,7 @@ import org.springframework.test.web.servlet.MockMvc;
 
 import java.time.OffsetDateTime;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import static org.mockito.ArgumentMatchers.*;
@@ -33,41 +35,36 @@ public class ForecastControllerTest {
     private ForecastService forecastService;
 
     @Test
-    void getForecasts_ok_returnsForecasts() throws Exception {
-        Forecast forecast = new Forecast();
-        forecast.setTime(OffsetDateTime.parse("2025-08-10T00:00:00Z"));
-        forecast.setPerimeter("Perimeter");
-        forecast.setForecaster("Forecaster");
-        forecast.setSubFeature("SubFeature");
-        forecast.setUnit("Unit");
-        forecast.setValue(1.00);
+    void getForecasts_ok_returnsForecastPage() throws Exception {
+        Forecast forecast1 = new Forecast();
+        forecast1.setTime(OffsetDateTime.parse("2025-08-10T00:00:00Z"));
+        Forecast forecast2 = new Forecast();
+        forecast2.setTime(OffsetDateTime.parse("2025-08-11T00:00:00Z"));
 
-        Slice<Forecast> forecastSlice = new SliceImpl<>(Collections.singletonList(forecast), PageRequest.of(0, 1), false);
-        given(forecastService.getForecasts(any(OffsetDateTime.class), any(OffsetDateTime.class), anyInt(), anyInt())).willReturn(forecastSlice);
+        ForecastPage page = new ForecastPage(List.of(forecast1, forecast2), 2, true, forecast2.getTime());
+        given(forecastService.getForecastPage(any(), any(), anyInt(), any())).willReturn(page);
 
         mockMvc.perform(get("/forecasts")
             .param("start_date_time", "2025-08-09T00:00:00Z")
-            .param("end_date_time", "2025-08-11T00:00:00Z")
-            .param("limit", "1")
-            .param("offset", "0")
+            .param("end_date_time", "2025-08-12T00:00:00Z")
+            .param("limit", "2")
                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.forecasts[0].perimeter").value("Perimeter"))
-                .andExpect(jsonPath("$.limit").value("1"))
-                .andExpect(jsonPath("$.offset").value("0"))
-                .andExpect(jsonPath("$.hasMoreData").value(false));
+                .andExpect(jsonPath("$.forecasts[0].time").value("2025-08-10T00:00:00Z"))
+                .andExpect(jsonPath("$.limit").value("2"))
+                .andExpect(jsonPath("$.has_more_data").value("Yes"))
+                .andExpect(jsonPath("$.next_start_time").value("2025-08-11T00:00Z"));
 
     }
 
     @Test
     void getForecasts_serviceThrowsException_returns400() throws Exception {
-        given(forecastService.getForecasts(any(OffsetDateTime.class), any(OffsetDateTime.class), anyInt(), anyInt()))
+        given(forecastService.getForecastPage(any(), any(), anyInt(), any()))
                 .willThrow(new IllegalArgumentException("Limit must be between 1 and 200."));
         mockMvc.perform(get("/forecasts")
                         .param("start_date_time", "2025-08-09T00:00:00Z")
                         .param("end_date_time", "2025-08-11T00:00:00Z")
                         .param("limit", "201")
-                        .param("offset", "0")
                         .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isBadRequest())
                 .andExpect(jsonPath("$.error").value("bad_request"))
