@@ -1,5 +1,6 @@
 package com.agregio.forecast.services;
 
+import com.agregio.forecast.dto.ForecastPage;
 import com.agregio.forecast.entities.Forecast;
 import com.agregio.forecast.repositories.ForecastRepository;
 import org.junit.jupiter.api.BeforeEach;
@@ -11,6 +12,7 @@ import org.springframework.data.domain.SliceImpl;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -29,31 +31,33 @@ public class ForecastServiceTest {
     }
 
     @Test
-    void getForecasts_returnsSlicedForecasts() throws IllegalAccessException {
+    void getForecastPage_returnsFirstPage_withMoreData() throws IllegalAccessException {
         OffsetDateTime start = OffsetDateTime.of(2025,7,1,0,0,0,0, ZoneOffset.UTC);
         OffsetDateTime end = start.plusDays(7);
 
-        Forecast forecast = new Forecast();
-        forecast.setTime(start.plusHours(1));
-        Slice<Forecast> forecastSlice = new SliceImpl<>(Collections.singletonList(forecast), PageRequest.of(0, 1), false);
-        given(forecastRepository.findByTimeRange(any(OffsetDateTime.class), any(OffsetDateTime.class),  any(PageRequest.class))).willReturn(forecastSlice);
+        Forecast forecast1 = new Forecast();
+        forecast1.setTime(start.plusHours(1));
+        Forecast forecast2 = new Forecast();
+        forecast2.setTime(start.plusHours(2));
+        given(forecastRepository.findFirstPage(any(OffsetDateTime.class), any(OffsetDateTime.class),  any(PageRequest.class))).willReturn(List.of(forecast1, forecast2));
+        given(forecastRepository.existsByTimeGreaterThanAndTimeLessThan(any(OffsetDateTime.class), any(OffsetDateTime.class))).willReturn(true);
 
-        Slice<Forecast> result = forecastService.getForecasts(start, end, 1, 0);
-        assertEquals(1, result.getContent().size());
-        assertFalse(result.hasNext());
+        ForecastPage result = forecastService.getForecastPage(start, end, 1, null);
+        assertTrue(result.forecasts().contains(forecast1));
+        assertTrue(result.forecasts().contains(forecast2));
+        assertTrue(result.hasMoreData());
+        assertEquals(forecast2.getTime(), result.nextStartTime());
     }
 
     @Test
     void getForecasts_throwsIllegalArgumentException() {
         OffsetDateTime start = OffsetDateTime.of(2025,7,1,0,0,0,0, ZoneOffset.UTC);
         assertThrows(IllegalArgumentException.class,
-                () -> forecastService.getForecasts(start, start.minusDays(1), 10, 0));
+                () -> forecastService.getForecastPage(start, start.minusDays(1), 10, null));
         assertThrows(IllegalArgumentException.class,
-                () -> forecastService.getForecasts(start, start.plusDays(1), 10, -10));
+                () -> forecastService.getForecastPage(null, start.plusDays(1), 10, null));
         assertThrows(IllegalArgumentException.class,
-                () -> forecastService.getForecasts(start, start.plusDays(1), 0, 0));
-        assertThrows(IllegalArgumentException.class,
-                () -> forecastService.getForecasts(start, start.plusDays(1), 201, 0));
+                () -> forecastService.getForecastPage(start, start.plusDays(1), 0, null));
         verifyNoInteractions(forecastRepository);
     }
 
